--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "dependencies": {
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
-    "@rails/ujs": "^6.0.0",
+    "@rails/ujs": "^6.0.3-4",
     "@rails/webpacker": "4.3.0",
+    "rails-ujs": "^5.2.4-4",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
